Fix search icon dark mode color in right sidebar

--- a/css/new-design/dark-mode.css
+++ b/css/new-design/dark-mode.css
@@ -22,6 +22,11 @@
 	fill: currentColor;
 	color: var(--primary-text);
 }
+/* Right sidebar: Path of icon */
+.rq0escxv.l9j0dhe7.du4w35lb.j83agx80.cbu4d94t.g5gj957u.f4tghd1a.ifue306u.kuivcneq.t63ysoy8 [role='button'] svg path {
+	fill: currentColor;
+	color: var(--primary-text);
+}
 /* Right sidebar: search icon */
 .rq0escxv.l9j0dhe7.du4w35lb.j83agx80.cbu4d94t.g5gj957u.f4tghd1a.ifue306u.kuivcneq.t63ysoy8 [role='button'] svg[role='presentation'] path {
 	fill: currentColor;
